derive/tests/ui/attr-invalid-meta-list-names.stderr
error: Invalid attribute parameter(s): 'Xalias'. Expected 'alias'
  --> $DIR/attr-invalid-meta-list-names.rs:10:2
   |
10 |       /// Returns a protocol version
   |  _____^
11 | |     #[rpc(name = "protocolVersion", Xalias("alias"))]
12 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^

error: aborting due to previous error

